Avoid video overflow

--- a/themes/pelican-hss/static/css/style.css
+++ b/themes/pelican-hss/static/css/style.css
@@ -129,6 +129,10 @@ th:last-child, td:last-child {
     text-align: center;
 }
 
+video {
+    width: 100%;
+}
+
 /*
 ^ Manually insterted ^
 */
